Prevent covered scrollbar in photo list.

--- a/src/stylesheets/components/photo/_list.scss
+++ b/src/stylesheets/components/photo/_list.scss
@@ -8,6 +8,11 @@
   flex-direction: column;
   margin-bottom: $space-min;
 
+  .scroll-container {
+    position: relative;
+    z-index: 0;
+  }
+
   .photo {
     align-items: center;
     position: relative;
